# truenas-cli

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  VERIFICATION.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  truenas-cli.py
analysis/: expansion-opportunities.md  performance-analysis.md
config/: .env.example
docs/: CONTRIBUTING.md  TROUBLESHOOTING.md
examples/: README.md  basic_usage.py  batch-operations.yaml  error_handling.py  logging_example.py
prompts/completed/: 001-analyze-expansion-opportunities.md
src/truenas_cli/: __init__.py  __main__.py  cli.py  config.py  core.py  langchain_support.py  logging_config.py  validation.py
src/truenas_cli/client/: __init__.py  base.py  exceptions.py  models.py
src/truenas_cli/commands/: __init__.py  alerts.py  app.py  base.py  batch.py  cloudsync.py  completion.py  config.py  dataset.py  disk.py  general.py  group.py  nfs.py  pool.py  replication.py  service.py  share.py  smb.py  snapshot.py  system.py  user.py
src/truenas_cli/utils/: __init__.py  batch.py  completion.py  datetime.py  filtering.py  formatters.py  watch.py
src/truenas_client/: __init__.py  client.py  retry.py
tests/: __init__.py  conftest.py  test_client.py  test_commands.py  test_dataset_cli.py  test_pool_cli.py  test_pool_snapshottask_cli.py  test_snapshot.py  test_snapshot_cli.py  test_system_cli.py  test_utils.py  test_validation.py
tests/integration/: __init__.py  test_basic.py
